--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- card area -->
     <div class="container my-3">
         <h1>Welcome to your notes</h1>
-        <div class="card my-4">
+        <div class="card ">
             <div class="card-body">
                 <h5 class="card-title">Add Note</h5>
                 <div class="form-group">
